fix: left align about page h3

--- a/resources/public/styles.css
+++ b/resources/public/styles.css
@@ -56,6 +56,10 @@ form {
   text-align: center;
 }
 
+.left {
+  text-align: left;
+}
+
 /* Forms */
 .form-group {
   display: block;
